test/src/e2e_vm_tests/test_programs/should_fail/return_path_analysis/src/main.sw
script;

// Shows that https://github.com/FuelLabs/sway/issues/6369 has been resolved.
//
// The depth of the return path analysis was limited to 50, which meant that there was no
// requirement to return a value after 50 blocks.

fn f() -> bool {
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };

    // No value returned here. The return path analysis should report an error, even though the 
}


// Check that return path analysis is applied to local impl methods.
fn g() -> bool {

    struct X {
        y: bool,
    }

    impl core::ops::Eq for X {
        fn eq(self, other: Self) -> bool {
	    if true {
		return true;
	    } else {
		return false;
	    };
        }
    }

    let x = X { y : false };
    let y = X { y : true } ;

    x == y
}

fn main() {
    let _ = f();
    let _ = g();
}
